@@ -14,6 +14,8 @@ texlive-bin (2025.20250727.75242+ds-5) UNRELEASED; urgency=medium
 
   * Implement override_dh_missing correctly.
   * Lintian stuff.
+  * Use DEB_CFLAGS_MAINT_APPEND (instead of CFLAGS) to append flags to gcc
+    to /not/ kill hardening flags.
 
  -- Debian TeX Task Force <debian-tex-maint@lists.debian.org>  Sun, 17 Aug 2025 09:38:50 +0200
 
